added a numba version to problem 5

--- a/adv-stat-comp-1.ipynb
+++ b/adv-stat-comp-1.ipynb
@@ -13,12 +13,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "id": "ff81e050",
    "metadata": {},
    "outputs": [],
    "source": [
     "import numpy as np\n",
+    "import numba\n",
     "import matplotlib.pyplot as plt"
    ]
   },
@@ -45,7 +46,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 219,
+   "execution_count": 3,
    "id": "dc98a62d",
    "metadata": {},
    "outputs": [],
@@ -58,17 +59,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 220,
+   "execution_count": 4,
    "id": "597ee52d",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([ 0.04205902, -0.0233545 , -0.01971525, -0.03927174,  0.00822741])"
+       "array([0.09069488, 0.01488135, 0.00748768])"
       ]
      },
-     "execution_count": 220,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -94,22 +95,22 @@
     "\n",
     "# model fitting\n",
     "Beta_i = vectorized_least_squares(X_minus_i)\n",
-    "Beta_i[0][:5]"
+    "Beta_i[0][:3]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 221,
+   "execution_count": 5,
    "id": "b8881d11",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([ 0.04205902, -0.0233545 , -0.01971525, -0.03927174,  0.00822741])"
+       "array([0.09069488, 0.01488135, 0.00748768])"
       ]
      },
-     "execution_count": 221,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -120,6 +121,9 @@
     "# array shaping\n",
     "Y = X[:,0][:,None]\n",
     "XY = X[:,1:]\n",
+    "W = np.ones((n,n))\n",
+    "W = W - np.eye(n)\n",
+    "W = W.astype(bool)\n",
     "Y_tile = np.tile(Y,(n,1,1))\n",
     "XY_tile = np.tile(XY,(n,1,1))\n",
     "XY_minus_i = XY_tile[W].reshape(n,n-1,p-1)\n",
@@ -133,24 +137,24 @@
     "# model fitting\n",
     "Beta_i_v2 = np.array([least_squares_v2(Y_minus_i[i],XY_minus_i[i]) \n",
     "                      for i in range(n)]) # one for loop\n",
-    "Beta_i_v2 = Beta_i_v2.reshape(500,50)\n",
-    "Beta_i_v2[0][:5]\n"
+    "Beta_i_v2 = Beta_i_v2.reshape(n,p-1)\n",
+    "Beta_i_v2[0][:3]\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 222,
+   "execution_count": 6,
    "id": "af6a27f9",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "(array([ 1.46354195e-04, -4.42420062e-04, -9.88987246e-05]),\n",
-       " array([ 1.46354195e-04, -4.42420062e-04, -9.88987246e-05]))"
+       "(array([-0.00153771, -0.00108878, -0.00104573]),\n",
+       " array([-0.00153771, -0.00108878, -0.00104573]))"
       ]
      },
-     "execution_count": 222,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1011,7 +1015,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "id": "7025f469",
    "metadata": {},
    "outputs": [],
@@ -1025,7 +1029,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 107,
+   "execution_count": 39,
    "id": "20806cf5",
    "metadata": {},
    "outputs": [],
@@ -1033,7 +1037,7 @@
     "# (code to generate matrix)\n",
     "rng = np.random.default_rng(98765)\n",
     "# rng = np.random.default_rng(12345)\n",
-    "n = 1000\n",
+    "n = 300\n",
     "A = np.random.randint(1, 100, size=(n,n))"
    ]
   },
@@ -1055,7 +1059,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 108,
+   "execution_count": 40,
    "id": "8d914139",
    "metadata": {},
    "outputs": [],
@@ -1072,7 +1076,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 10,
    "id": "9563bd32",
    "metadata": {},
    "outputs": [
@@ -1086,7 +1090,7 @@
        "       [0., 0., 1., 0., 0.]])"
       ]
      },
-     "execution_count": 42,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1100,7 +1104,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 11,
    "id": "ac640c54",
    "metadata": {},
    "outputs": [],
@@ -1116,7 +1120,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 109,
+   "execution_count": 41,
    "id": "3bfa2af0",
    "metadata": {},
    "outputs": [
@@ -1124,13 +1128,13 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "800.0\n",
-      "333 827\n",
-      "[[ 4 19 96 13 37]\n",
-      " [ 5 79 91  1 70]\n",
-      " [94 96 92 56 95]\n",
-      " [55 66 91 77 27]\n",
-      " [ 4 90 89 46 10]]\n"
+      "820.0\n",
+      "124 232\n",
+      "[[ 1 23 89 48 20]\n",
+      " [32 32 95 76 38]\n",
+      " [90 99 88 96 97]\n",
+      " [ 2 45 95 19 64]\n",
+      " [17 84 71 28 47]]\n"
      ]
     }
    ],
@@ -1177,17 +1181,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 81,
+   "execution_count": 42,
    "id": "264b7ac1",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "783.0"
+       "820.0"
       ]
      },
-     "execution_count": 81,
+     "execution_count": 42,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1213,18 +1217,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 101,
-   "id": "7cfddda5",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "m = 2000\n",
-    "B = np.random.randint(1, 100, size=(m,m))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 115,
+   "execution_count": 43,
    "id": "03cf82e5",
    "metadata": {},
    "outputs": [
@@ -1234,7 +1227,7 @@
        "820.0"
       ]
      },
-     "execution_count": 115,
+     "execution_count": 43,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1242,33 +1235,86 @@
    "source": [
     "# Solution with scipy.signal.convolve2d\n",
     "\n",
-    "convolve2d(B,square_bool).max()"
+    "convolve2d(A,square_bool).max()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 113,
+   "execution_count": 44,
    "id": "85283918",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "(819.9999999999989+4.547473508864641e-13j)"
+       "(820-3.947164167564876e-15j)"
       ]
      },
-     "execution_count": 113,
+     "execution_count": 44,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "k = square_bool.shape[0]\n",
-    "l = B.shape[0]\n",
+    "l = A.shape[0]\n",
     "ifft2(\n",
-    "    fft2(B,s=(l+k-1,l+k-1))*\n",
+    "    fft2(A,s=(l+k-1,l+k-1))*\n",
     "    fft2(square_bool,s=(l+k-1,l+k-1))\n",
     ").max()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "2ead669e",
+   "metadata": {},
+   "source": [
+    "#### Using Numba\n",
+    "Here I can write a for loop as I am more comfortable with.\n",
+    "It is still faster than the fancy tricks."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 45,
+   "id": "f3bb06e3",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "@numba.jit\n",
+    "def sum_crosses_numba(matrix,convolve_matrix):\n",
+    "    zmat = np.zeros_like(matrix)\n",
+    "    c = min(convolve_matrix.shape) // 2\n",
+    "    J = zmat.shape[0]\n",
+    "    K = zmat.shape[1]\n",
+    "    for j in range(c, J-c):\n",
+    "        for k in range(c, K-c):\n",
+    "            submat = matrix[(j-c):(j+c+1),(k-c):(k+c+1)]\n",
+    "            val = (submat * square_bool).sum()\n",
+    "            zmat[j,k] = val\n",
+    "    return zmat"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 46,
+   "id": "d3599f35",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(820, (124, 232))"
+      ]
+     },
+     "execution_count": 46,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "mat_numba = sum_crosses_numba(A,square_bool)\n",
+    "mat_numba.max(), np.unravel_index(mat_numba.argmax(),mat_numba.shape)"
    ]
   }
  ],
