added a numba version to problem 5

--- a/adv-stat-comp-1.ipynb
+++ b/adv-stat-comp-1.ipynb
@@ -13,13 +13,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 60,
    "id": "ff81e050",
    "metadata": {},
    "outputs": [],
    "source": [
     "import numpy as np\n",
     "import numba\n",
+    "from numba import njit\n",
+    "import scipy\n",
     "import matplotlib.pyplot as plt"
    ]
   },
